--- a/weather-app1/src/index.css
+++ b/weather-app1/src/index.css
@@ -1,13 +1,30 @@
+
 body {
   margin: 0;
+  color: white;
+ 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif;  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0px auto;
+  padding: 1rem 0px 3rem;
+  background: linear-gradient(80deg,#000428,#004e92);
+  /* background: url(/static/media/bg.e0d46b6….png) 100% center repeat; */
+
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ 
